--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
     min-width: 100%;
     height: auto;
     display: block;
-    margin: 0 auto;
+    margin: 0 ;
 }
 
 /* --- LAYOUT GRID SYSTEM --- */
