--- a/style.css
+++ b/style.css
@@ -192,3 +192,11 @@ input, select {
     height: 38px;
     box-sizing: border-box;
 }
+
+.graph-img-container {
+    page-break-inside: avoid;
+    break-inside: avoid;
+    display: block !important;
+    min-height: 200px; /* Ensures space is reserved */
+    margin: 40px 0;
+}
